--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,10 +1,6 @@
 name: WorldEditBridge
 main: no.runsafe.worldeditbridge.Plugin
 version: 1.0
-authors: []
-depend: []
-description:
-commands:
-  something:
-    description:
-    aliases: []
+authors: [mortenn]
+depend: [WorldEdit]
+description: Bridge to access WorldEdit from a Runsafe plugin
